Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14551

Python 3 cannot open null device

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.12
    • NTCore
    • None
    • ReactOS 0.4.8, VirtualBox 5.1.34 r121010, Python 3.4.3

    Description

      A code to reproduce:

      import os
      n = os.open(os.devnull, os.O_RDWR)
      

      Also I place some debug prints to null.sys driver. if open by Python it outputs nothing, but when echo from cmd NullWrite function was called.

      Attachments

        Activity

          People

            Heis Spiter Pierre Schweitzer
            A_S A_S
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: